cluster/config/authentik/authentik.yaml
---
# Source: authentik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
  labels:
    name: authentik
spec:
  type: ClusterIP
  ports:
    - port: 9100
      name: http-metrics
      protocol: TCP
      targetPort: http-metrics
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    name: authentik
    component: "server"
---
# Source: authentik/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  namespace: authentik
  labels:
    name: authentik
    component: "server"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: authentik
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault-0.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "authentik"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        name: authentik
        component: "server"
    spec:
      serviceAccountName: authentik
      enableServiceLinks: true
      priorityClassName: 
      containers:
        - name: authentik
          image: "ghcr.io/goauthentik/server:2023.6.1"
          imagePullPolicy: "Always"
          args: ["server"]
          volumeMounts:
            - name: geoip-db
              mountPath: /geoip
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: http-metrics
              containerPort: 9300
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
      volumes:
        - name: geoip-db
          emptyDir: {}
---
# Source: authentik/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
  labels:
    name: authentik
    component: "worker"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: "authentik"
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault-0.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "authentik"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        name: authentik
        component: "worker"
    spec:
      serviceAccountName: authentik
      enableServiceLinks: true
      priorityClassName: 
      containers:
        - name: authentik
          image: "ghcr.io/goauthentik/server:2023.6.1"
          imagePullPolicy: "Always"
          args: ["worker"]
          volumeMounts:
            - name: geoip-db
              mountPath: /geoip
      volumes:
        - name: geoip-db
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-postgres
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault-0.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "authentik"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        name: "authentik"
        app: postgresql
    spec:
      serviceAccountName: authentik
      volumes:
        - name: "data"
          persistentVolumeClaim:
            claimName: authentik-postgres
      containers:
        - name: postgres
          image: bitnami/postgresql:12
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: authentik
  labels:
    app: postgresql
spec:
  type: ClusterIP
  ports:
   - port: 5432
  selector:
    app: postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-redis
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      name: "authentik"
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault-0.vault.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-role: "authentik"
        vault.security.banzaicloud.io/vault-path: "kubernetes"
      labels:
        name: "authentik"
        app: authentik-redis
    spec:
      serviceAccountName: authentik
      volumes:
        - name: "data"
          persistentVolumeClaim:
            claimName: authentik-redis
      containers:
        - name: redis
          image: docker.io/bitnami/redis:6.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /bitnami/redis/data
---
apiVersion: v1
kind: Service
metadata:
  name: redis 
  namespace: authentik
  labels:
    name: "authentik"
spec:
  type: ClusterIP
  ports:
   - port: 6379
  selector:
    app: authentik-redis
    name: "authentik"
