cluster/config/authentik/authentik-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentik
  namespace: authentik
spec:
  hosts:
  - "authentik.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: authentik
        port:
          number: 80
